--- a/open/slicease.html
+++ b/open/slicease.html
@@ -122,6 +122,7 @@
 				</p>
 				<h4>Latest News</h4>
 				<ul class="latestnews">
+					<li>Slicease.js 2.0 released.<i> - Dec. 30, 2015</i></li>
 					<li>Slicease.js won a glory of <b>22 Best Weekly Web Design & Development Resources</b> at 
 						<a href="http://www.jqueryscript.net/blog/Weekly-Web-Design-Development-News-Collective-59.html" target='_blank'>jqueryscript.net</a>, 
 						and reprinted by many others, e.g. 
@@ -134,43 +135,33 @@
 				</ul>
 				<h4>Description</h4>
 				<p>
-					This is a 3D image rotator with animation easing based on Bezier curve, 
-					which was planned as the tile of my proposed website. 
-					<br/>
-					It is built with html5 canvas and pure javascript, and easy to config. 
+					This is a 3D image rotator designed for my personal homepage.
+					<br/><br/>
+					It is built on html5 canvas and wrote in pure javascript. Unlike with the css3 animation, the control points of bezier curve are not limited in the range of 0 to 1, 
+					so is the number of the points. It also has a powerful and easy-to-understand configuration.
+					<br/><br/>
 					This project is open-sourced with MIT lisence. Enjoy it wherever you like :)
 				</p>
 				<h4>Usage</h4>
 				<p>
-					Include the library under the folder of 'js'. You just need a canvas tag in your html file and make your images ready.
-					Then, as the index.html does, here we go~
+					You just need to name out a container and get your images ready.
+					Here's the basic settings you may need:
 				</p>
 
 <?prettify lang=js linenums=true?>
 <pre class="prettyprint">
-var slicease = new Slicease();
-var markfunc = new Func();
-markfunc.setup(markIndex);
-var config = {
-	canvas_id: 'canvas', 
-	images: ['contents/img1.png', 'contents/img2.png', 'contents/img3.png'], 
-	pieces: [8, 10, 11],
-	mark_func: markfunc
-};
-slicease.setup(config);
-slicease.init();
-slicease.play();
+var sli = slicease('slidercontainer').setup({
+	width: 1200,
+	height: 500,
+	sources: ['images/contents/img1.png', 'images/contents/img2.png', 'images/contents/img3.png'],
+	canvas: {
+		pieces: [10, 8, 7, 4]
+	}
+});
 </pre>
 <br/>
 				<p>
-					The 'pieces' in the config means how many cubes of each image should be separated.
-					'mark_func' must be typed with Func, not just a function.
-					There are more configurations. You can find them marked with 'Available settings' in the main class named 'Slicease'. 
-					Such as 'padding', 'delays', 'duration', etc.
-					Which should be noticed is that 'screen_z' must be closer or smaller than 'object_z'.
-					<br/><br/>
-					There are several cfgs named 'easing_xxx', and you can have a look at the Slicease.init function once you want to 
-					change the easing params or redefine the easing functions. 
+					......
 				</p>
 			</div>
 			<div class="clear"></div>
